--- a/.gitignore
+++ b/.gitignore
@@ -21,11 +21,11 @@ web/sites/default/files
 
 # Pantheon commits a settings.php for environment-specific settings.
 # Place local settings in settings.local.php
-web/sites/*/settings.local.php
-web/sites/*/default.settings.php
-web/sites/*/settings.php
-web/sites/*/services*.yml
-web/sites/*/services.pantheon.*.yml
+sites/*/settings.local.php
+sites/*/default.settings.php
+sites/*/settings.php
+sites/*/services*.yml
+sites/*/services.pantheon.*.yml
 
 # Ignore SimpleTest multi-site environment.
 web/sites/simpletest
@@ -74,3 +74,4 @@ Thumbs.db
 # Local documentation directory.
 /.editorconfig
 /.gitattributes
+/autoload.php
